11710123_project2/test/test_11710123_10.spl
struct a{
    int b;
    int c;
    int d;
};

int calculate_total_time(struct a app){
    return app.b * 30 + app.c - 60;
}

int main(){
    struct a app1;
    int n = 1;
    int arr[10][20];
    char c_arr[5];
    n = n && 1 || c_arr[3]; 
    arr[2][2] = c_arr[1];
    return calculate_total_time(app1);
}
